--- a/templates/show.html
+++ b/templates/show.html
@@ -30,7 +30,7 @@
 				<p><span>片名：</span><em>{{ alubm['albumName'] }}</em></p>
 				<p><span>片长：</span><em>{{ alubm['playLength'] }}</em></p>
 				<p><span>次数：</span><em>{{ alubm['totalPlayNum'] }}</em></p>
-				<p><span>评分：</span><em>{{ alubm['videoScore'] }}</em></p>
+				<p><span>评分：</span><em>{{ alubm['Score'] }}</em></p>
 				<p><span>导演：</span><em>{{ alubm['directors'] }}</em></p>
 				<p><span>主演：</span><em>{{ alubm['mainActors'] }}</em></p>
 				<p><span>类型：</span><em>{{ alubm['type'] }}</em></p>
