--- a/templates/barcode.html
+++ b/templates/barcode.html
@@ -7,9 +7,12 @@
     <body>
         <h1>KolaTV Serial system</h1>
         {% for name,filename in barcodes %}
-            <p><h2>{{name}}</h2><br />
-            <object data="{{filename}}" type="image/svg+xml">
-            <param name="src" value="{{filename}}" /></object>
+            {% if image %}
+                <p><h2>{{name}}</h2><br />
+                <object data="{{filename}}" type="image/svg+xml"><param name="src" value="{{filename}}" /></object>
+            {% else %}
+                {{name}}<br />
+            {% end %}
         {% end %}
     </body>
 </html>
