改进文件上传.

--- a/templates/update.html
+++ b/templates/update.html
@@ -22,16 +22,23 @@
     </tr>
     <tr class="row-2">
         <td class="category">
-            文件名    </td>
+            文件列表（可多选）</td>
         <td>
-            <input type='file' name='file'/>
+            <input type='file' name='file' multiple="true" />
         </td>
     </tr>
     <tr class="row-3">
         <td class="category">
-            文件重命名    </td>
+            项目名    </td>
         <td>
-            <input type="text" name="newfile" size="32" maxlength="32" value id="file" />
+            <input type="text" name="projectname" size="32" maxlength="32" value id="file" />
+        </td>
+    </tr>
+    <tr class="row-3">
+        <td class="category">
+            密码    </td>
+        <td>
+            <input type="password" name="password" size="32" maxlength="32" value id="file" />
         </td>
     </tr>
     <tr>
