update tvlist, Update add chanagelog.

--- a/templates/update.html
+++ b/templates/update.html
@@ -17,7 +17,7 @@
         <td class="category">
             版本号    </td>
         <td>
-            <input type="text" name="version" size="32" maxlength="32" value="" />
+            <input type="text" name="version" size="50" maxlength="50" value="" />
         </td>
     </tr>
     <tr class="row-2">
@@ -31,14 +31,22 @@
         <td class="category">
             项目名    </td>
         <td>
-            <input type="text" name="projectname" size="32" maxlength="32" value id="file" />
+            <input type="text" name="projectname" size="50" maxlength="50" value id="file" />
         </td>
     </tr>
     <tr class="row-3">
         <td class="category">
             密码    </td>
         <td>
-            <input type="password" name="password" size="32" maxlength="32" value id="file" />
+            <input type="password" name="password" size="50" maxlength="50" value id="file" />
+        </td>
+    </tr>
+
+    <tr class="row-3">
+        <td class="category">
+            Changelog    </td>
+        <td>
+            <textarea name="changelog" wrap="logical" rows="20" cols="80"> </textarea>
         </td>
     </tr>
     <tr>
