--- a/templates/online.html
+++ b/templates/online.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
 <style>
-	table.list { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 80%; margin-bottom: 4px; }
-	table.list th {  background-color:#EEEEEE; padding: 4px; white-space:nowrap; }
-	table.list td {  text-align:center; vertical-align:top; padding-right:10px;}
-	table.list td.id { width: 2%; text-align: center;}
+	table.list    { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 80%; margin-bottom: 4px; }
+	table.list th { background-color:#EEEEEE; padding: 4px; white-space:nowrap; }
+	table.list td { text-align:center; vertical-align:top; padding-right:10px;}
+	table.list td.id     { width: 2%; text-align: center;}
 	table.list td.chipid { width: 4%; text-align: center;}
-	table.list td.serial{ width: 50px; text-align: center;}
-	table.list td.area {width:15%; white-space:nowrap; text-align:left; }
-	table.list td.time {width:15%; white-space:nowrap; text-align:center; }
-	table.list td.ip { text-align: left; width: 80px; }
-	table.list td.key { text-align: left; width: 80px; }
+	table.list td.serial { width: 50px; text-align: center;}
+	table.list td.area   { width: 15%; white-space:nowrap; text-align:left; }
+	table.list td.time   { width: 15%; white-space:nowrap; text-align:center; }
+	table.list td.ip     { width: 80px; text-align: left; }
+	table.list td.key    { width: 80px; text-align: left; }
 
 body, #wrapper {
 	font-family: "Lucida Grande", "microsoft yahei", verdana, arial, helvetica, sans-serif;
@@ -19,8 +19,7 @@ body, #wrapper {
 </style>
 
 <script language="JavaScript">
-function myrefresh()
-{
+function myrefresh() {
 	window.location.reload();
 }
 setTimeout('myrefresh()',5000); //指定5秒刷新一次
