整理缓冲区机制

--- a/templates/online.html
+++ b/templates/online.html
@@ -57,10 +57,10 @@ setTimeout('myrefresh()',30000); //指定5秒刷新一次
 		<h1>注册用户列表：</h1>
 		<table border="1" class="list">
 			<tr>
-				<th> ID </th>
-				<th> 序列号 </th>
-				<th> 芯片号 </th>
+				<th> 顺序号 </th>
 				<th> 客户号 </th>
+				<th> 芯片号 </th>
+				<th> 序列号 </th>
 				<th> 注册时间 </th>
 			</tr>
 			{% for v in allusers %}
