online 默认不显示所有注册用户

--- a/templates/online.html
+++ b/templates/online.html
@@ -54,25 +54,27 @@ setTimeout('myrefresh()',30000); //指定5秒刷新一次
 				</tr>
 			{% end %}
 		</table>
-		<h1>注册用户列表：</h1>
-		<table border="1" class="list">
-			<tr>
-				<th> 顺序号 </th>
-				<th> 客户号 </th>
-				<th> 芯片号 </th>
-				<th> 序列号 </th>
-				<th> 注册时间 </th>
-			</tr>
-			{% for v in allusers %}
+        {% if allusers %}
+			<h1>注册用户列表：</h1>
+			<table border="1" class="list">
 				<tr>
-					<td class="id">     {{v['number']}}          </td>
-					<td class="ip">     {{v['client_id']}}       </td>
-					<td class="chipid"> {{v['chipid']}}          </td>
-					<td class="serial"> {{v['serial']}}          </td>
-					<td class="time">   {{v['registerTimeStr']}} </td>
+					<th> 顺序号 </th>
+					<th> 客户号 </th>
+					<th> 芯片号 </th>
+					<th> 序列号 </th>
+					<th> 注册时间 </th>
 				</tr>
-			{% end %}
-		</table>
+				{% for v in allusers %}
+					<tr>
+						<td class="id">     {{v['number']}}          </td>
+						<td class="ip">     {{v['client_id']}}       </td>
+						<td class="chipid"> {{v['chipid']}}          </td>
+						<td class="serial"> {{v['serial']}}          </td>
+						<td class="time">   {{v['registerTimeStr']}} </td>
+					</tr>
+				{% end %}
+			</table>
+        {% end %}
 
 	</body>
 </html>
